src-tauri/cargo_check_output.txt
cargo :     Checking popup-bar v0.1.0 
(C:\Users\matth\OneDrive\Dokumente\GitHub\popup-bar\popup-bar\src-tauri)
In Zeile:1 Zeichen:1
+ cargo check 2>&1 | Out-File -FilePath cargo_check_output.txt -Encodin ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking po...-bar\src-tauri) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0599]: no method named `get_primary_monitor` found for struct `Box<dyn 
PlatformProvider>` in the current scope
   --> src\modules\hotzone.rs:169:48
    |
169 |                         let monitor = provider.get_primary_monitor(); // 
Simplified for now, assume primary
    |                                                ^^^^^^^^^^^^^^^^^^^ 
method not found in `Box<dyn PlatformProvider>`

warning: use of deprecated method `tauri_plugin_shell::Shell::<R>::open`: Use 
tauri-plugin-opener instead.
  --> src\modules\launcher.rs:77:14
   |
77 |             .open(path.to_string(), None)
   |              ^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: unused variable: `window`
   --> src\commands\settings_commands.rs:141:5
    |
141 |     window: WebviewWindow,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: 
`_window`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by 
default

For more information about this error, try `rustc --explain E0599`.
warning: `popup-bar` (lib) generated 2 warnings
error: could not compile `popup-bar` (lib) due to 1 previous error; 2 warnings 
emitted
